dev/config/ingress/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: default
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
 #type: LoadBalancer
  #loadBalancerIP: 34.23.45.121
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: ingress-nginx
